<resources>
    <string name="app_name">Floating Labels</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_phone">Phone no</string>
    <string name="hint_address">Address</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_phone">Enter valid phone number</string>
    <string name="err_msg_address">Enter your address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cestemo_educare">Cestemo Educare</string>
    <string name="email_info">info@cestemo.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_location">Our Locations</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_email">E-mail Us</string>
    <string name="menu_about">About Us</string>
    <string name="menugroup_communicate">Communicate</string>
    <string name="recycle_fragment">This is the recycle Fragment</string>
    <string name="hint_hear">Where did you hear about us?</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
