<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_user"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_action_locate"
            android:title="@string/menu_location" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_star"
            android:title="@string/menu_about" />
    </group>

    <item
        android:title="@string/menugroup_communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_action_call"
                android:title="@string/menu_contact" />

            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_action_mail_add"
                android:title="@string/menu_email" />
        </menu>
    </item>
</menu>